feat: 숫자세기 앱 구현